--- a/retail-order-service/src/main/resources/application.properties
+++ b/retail-order-service/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=8080
 spring.application.name=retail-application
 
 # Default active profile (can be overridden)
-spring.profiles.active=platform
+#spring.profiles.active=platform
+#spring.profiles.active=virtual
 
 # Common properties for both profiles
 spring.main.allow-circular-references=true
