--- a/retail-order-service/src/main/resources/application-platform.properties
+++ b/retail-order-service/src/main/resources/application-platform.properties
@@ -1,6 +1,5 @@
 # Platform threads configuration
 spring.threads.virtual.enabled=false
 
-# Tomcat configuration for platform threads
-server.tomcat.threads.max=200
-server.tomcat.threads.min=10
+# Product service URL
+product.service.url=http://localhost:8081
