--- a/retail-order-service/src/main/resources/application-virtual.properties
+++ b/retail-order-service/src/main/resources/application-virtual.properties
@@ -1,6 +1,5 @@
 # Virtual threads configuration
 spring.threads.virtual.enabled=true
 
-# Tomcat configuration optimized for virtual threads
-server.tomcat.threads.max=500
-server.tomcat.threads.min=10
+# Product service URL
+product.service.url=http://localhost:8081
